[package]
name = "hermit_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
getopts = "0.2"
log = { version = "0.4", features = ["kv_unstable"]}
parking_lot = "0.12"
r2d2 = "0.8"
redis = { version = "0.22.3", features = ["r2d2"] }
route-recognizer = "0.3"
scheduled-thread-pool = "0.2"
simple_logger = "4.0.0"
tiny_http = "0.12.0"
wasmi = "0.27"
wit-bindgen-wasmi = { git = "https://github.com/flavio/wit-bindgen.git", branch = "wasmi" }


[target.'cfg(target_os = "hermit")'.dependencies]
hermit-sys = { version = "0.4", features = ["smp", "pci", "fsgsbase", "tcp", "dhcpv4"] }
